--- a/src/styles/cssgrid1.scss
+++ b/src/styles/cssgrid1.scss
@@ -41,41 +41,41 @@
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
-    grid-row-end: 2;
+    // grid-row-end: 2;
   }
 
   .2b {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
-    grid-row-end: 3;
+    // grid-row-end: 3;
   }
 
   .2c {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
-    grid-row-end: 3;
+    // grid-row-end: 3;
   }
 
   .2d {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 2;
+    // grid-row-end: 2;
   }
 
   .2e {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 2;
-    grid-row-end: 3;
+    // grid-row-end: 3;
   }
 
   .2f {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 2;
+    // grid-row-end: 2;
   }
 }
