--- a/src/styles/cssgrid3.scss
+++ b/src/styles/cssgrid3.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-gap: 5px;
   grid-template-columns: repeat(2, 1fr 2fr);
+  grid-template-rows: 100px 100px 100px;
 }
 
 .wrap3 div {
